# pyPFC

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
contrib/systemd/: pypfcd-shutdown.py  pypfcd.service
src/pypfc/: __init__.py  __main__.py
src/pypfc/processes/: __init__.py
