[metadata]
name = pyfpc
description = Fan and Powercontroller for RasPi+Argon1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lcnittl/pyfpc
author = Christian Knittl-Frank
author_email = lcnittl@gmail.com
license = GPL-3.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Hardware
    Topic :: Utilities
download_url = http://pypi.python.org/pypi/pyfpc
project_urls =
    GitHub: repo = https://github.com/lcnittl/pyfpc
    GitHub: issues = https://github.com/lcnittl/pyfpc/issues

[options]
packages = find_namespace:
install_requires =
    RPi.GPIO>=0.7.0
    smbus2>=0.3.0
python_requires = >=3.7
include_package_data = True
package_dir =
    = src
platforms = any
setup_requires =
    setuptools_scm>=4.1
zip_safe = False

[aliases]
release = check -rs sdist bdist_wheel

[options.packages.find]
where = src
