[metadata]
name = pyPFC
description = Fan and Powercontroller for Argon Fan HAT for RasPi on ubuntu
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lcnittl/pyPFC
author = Christian Knittl-Frank
author_email = lcnittl@gmail.com
license = GPL-3.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Hardware
    Topic :: Utilities
download_url = http://pypi.python.org/pypi/pyPFC
project_urls =
    GitHub: repo = https://github.com/lcnittl/pyPFC
    GitHub: issues = https://github.com/lcnittl/pyPFC/issues

[options]
packages = find:
install_requires =
    RPi.GPIO>=0.7.0
    smbus2>=0.3.0
python_requires = >=3.7
include_package_data = True
package_dir =
    = src
platforms = any
setup_requires =
    setuptools_scm>=4.1
zip_safe = False

[options.entry_points]
console_scripts =
    pypfc = pypfc.__main__:main

[aliases]
release = check -rs sdist bdist_wheel

[options.data_files]
contrib/systemd =
    contrib/systemd/pypfcd.service
    contrib/systemd/pypfcd-shutdown.py

[options.packages.find]
where = src
